# java-service-starter

./: .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  pyproject.toml
.codex/: index.json
docs/: user-guide.md
java_service_starter/: AGENTS.md  CLAUDE.md  __init__.py  __main__.py  cli.py  java_runner.py  maven.py  models.py  scanner.py  state.py  watcher.py
